# 1c_hbk_helper

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  cliff.toml  crontab  docker-compose.base.yml  docker-compose.bsl.yml  docker-compose.full.yml  docker-compose.split.yml  docker-compose.yml  entrypoint-mcp-only.sh  entrypoint.sh  env.example  pyproject.toml  requirements.txt
.cursor/: mcp.json
.github/workflows/: commitlint.yml  deploy.yml  lint.yml  release.yml  security.yml  test.yml
docs/: architecture.md  bsl-ls-mcp-setup.md  embedding.md  example_skd_to_table.bsl.txt  help_formats.md  mcp-tools-test-report.md  mcp.json.example  memory-and-scaling.md  qdrant-migration.md  run.md  search-and-mcp.md  security-audit-prompt.md  snippets-analysis.md  weather_form_example.bsl
docs/cursor-examples/: README.md
docs/cursor-examples/1c-mcp-development/: SKILL.md  reference.md
docs/cursor-examples/rules/: 1c-bsl-standards.mdc  1c-mcp-workflow.mdc  1c-project-conventions.mdc  1c-testing-workflow.mdc
docs/security-audit/: README.md  audit-runbook.md  code-review-verification.md  findings-report.md  nda-checklist.md  nda-executor-template.md  recommendations-backlog.md
docs/snippets/: README.md  snippets.json
docs/snippets/examples/: example_add_attribute.bsl
scripts/: parse_fastcode.py  run_mcp.sh
snippets/: README.md  fastcode_snippets.json  skd_composition_result.json
src/onec_help/: __init__.py  __main__.py  _utils.py  categories.py  cli.py  embedding.py  form_metadata.py  html2md.py  indexer.py  ingest.py  mcp_server.py  memory.py  parse_fastcode.py  parse_helpf.py  snippets_cache.py  snippets_loader.py  standards_loader.py  tree.py  unpack.py  watchdog.py  web.py
templates/: index.html
tests/: conftest.py  test_bsl_processor.py  test_bsl_utils.py  test_categories.py  test_cli.py  test_embedding.py  test_entrypoint.py  test_form_metadata.py  test_html2md.py  test_indexer.py  test_ingest.py  test_init.py  test_main.py  test_mcp_integration.py  test_mcp_server.py  test_memory.py  test_parse_fastcode.py  test_parse_helpf.py  test_snippet_classifier.py  test_snippets_loader.py  test_standards_loader.py  test_tree.py  test_unpack.py  test_utils.py  test_watchdog.py  test_web.py
tests/fixtures/bsl_sample/: ObjectModule.bsl
tests/fixtures/help_sample/: __categories__  field626.html  function_sample.html
